# opencv-image-detection

./: .gitignore  README.md  pyproject.toml
src/: adiitional_code.py  filters.py  image_segmentation.py  main.py  object_detection.py  segmentation.py  segmentation_video.py
