[tool.poetry]
name = "opencv-image-detection"
version = "0.1.0"
description = ""
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.1"
numpy = "^1.20.2"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
black = "^21.4b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
